updated profile picture

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div>
-        <img src="https://github.com/maykbrito.png" alt="Foto Teste">
+        <img src="https://github.com/wevertonvcp.png" alt="Foto de perfil">
       </div>
     </header>
     <main>
